--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,9 +28,13 @@ jobs:
           key: ng-project-{{ .Branch }}-{{ checksum "package-lock.json" }}
           paths:
             - "node_modules"
-      - test:
-          parallelism: 10
-          steps:
-            - run: CI=true npm run test
+  test:
+    working_directory: ~/ng-project
+    docker:
+      - image: cimg/node:16.14-browsers
+    parallelism: 10
+    steps:
+      - run: npm run test
+
 
 
